Fixes Button title and set z-index 1000 for notification.

--- a/main/static/sb-admin/custom-assets/css/custom-css.css
+++ b/main/static/sb-admin/custom-assets/css/custom-css.css
@@ -153,3 +153,8 @@ textarea {
         right: 35px;
     }
 }
+
+/* Flash message */
+.my-toast {
+    z-index: 1000;
+}
